Add three-question exam in initial TestMe app data